# denim

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  go.mod  go.sum  index.html  overview.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js  todos.md
.cargo/: config.toml
.github/workflows/: deploy.yml  test.yml
.zed/: settings.json
book/: book.toml
book/src/: SUMMARY.md  overview.md
crates/lexer/: Cargo.toml  README.md
crates/parser/: Cargo.toml
crates/stdx/: Cargo.toml
crates/syntax/: Cargo.toml  denim.ungram  denim_grammar_facts.toml
crates/syntax/references/: rust.ungram
crates/syntax/src/: ast.rs  attr.rs  attr_kind.rs  denim_language.rs  lib.rs  syntax_node.rs
crates/syntax/src/ast/: ast_children.rs  ast_node.rs  ast_token.rs  generated.rs  node_ext.rs  support.rs  token_ext.rs  traits.rs
crates/tokenizer/: Cargo.toml  README.md
crates/xtask/: Cargo.toml
design/: takes.md
editors/code/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
internal/testing/: by_golden_test_case_name.go  golden_test_case.go  golden_test_func.go  golden_test_suite.go  repo_path_util.go
internal/tools/: tools.go
journal/: 2022_06_08_tour.html  2023_09_16_hot_takes.html  2024_08_07_redesign.html  index.html
lang/ast/: identifier.go  identifier_unicode.go  index32.go  whitespace.go
lang/identifier/: identifier.go  identifier_unicode.go
lang/lexer/: is_rune.go  json_flavor.go  keywords.go  lex.go  lexer.go  lexer_errors.go  lexer_goldens_test.go  lexer_helpers.go  (+7 more)
spec/: anatomy.md
(+142 files in other folders)
