[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
always-assert = "0.2.0"
either = "1.13.0"
itertools = "0.13.0"
parser = { path = "../parser" }
rowan = "0.15.16"
smol_str = "0.2.2"
tokenizer = { path = "../tokenizer" }
